[gd_scene load_steps=7 format=3 uid="uid://d3q7hew02l55r"]

[ext_resource type="PackedScene" uid="uid://cy3k2aw7r14mq" path="res://src/RPGData/Scenes/UI/Battle/player_base_ui.tscn" id="1_gohqw"]
[ext_resource type="Script" path="res://src/RPGData/Scenes/UI/Battle/player_battle_main_ui.gd" id="2_stk7e"]
[ext_resource type="Script" path="res://addons/totween/src/tween_resource_instance.gd" id="3_ftnx2"]
[ext_resource type="Resource" uid="uid://co1mhuro68xsc" path="res://assets/Tweens/UI/Battle/ui_player_battle_main_open.tres" id="4_1vr4n"]
[ext_resource type="Theme" uid="uid://ujjia2gxvnn6" path="res://assets/Themes/Theme_NewsTicker.tres" id="5_pm4r5"]

[sub_resource type="Resource" id="Resource_j1ry4"]
script = ExtResource("3_ftnx2")
tween_name = "Focus"
tween_resource = ExtResource("4_1vr4n")
play_on_start = false
next_tween = ""

[node name="Player Main Menu" node_paths=PackedStringArray("initial_selection", "all_selections") instance=ExtResource("1_gohqw")]
script = ExtResource("2_stk7e")
menu_name = "player_battle_main"
hide_on_unfocus = true
initial_selection = NodePath("BG Area/Player Options/ScrollContainer/GridContainer/Attack")
all_selections = [NodePath("BG Area/Player Options/ScrollContainer/GridContainer/Attack")]
sequence_list = Array[ExtResource("3_ftnx2")]([SubResource("Resource_j1ry4")])

[node name="BG Area" parent="." index="0"]
offset_top = -190.0

[node name="Player Options" type="Control" parent="BG Area" index="1"]
layout_mode = 1
anchor_top = 0.315
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.400001
offset_top = 0.150002
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BG Area/Player Options" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
offset_right = -19.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="BG Area/Player Options/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 10
columns = 6

[node name="Padding" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="0"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Attack" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="1"]
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_ATTACK"
clip_text = true

[node name="Padding2" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="2"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Magic" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="3"]
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_MAGIC"
clip_text = true

[node name="Padding3" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="4"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Defend" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="5"]
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_DEFEND"
clip_text = true

[node name="Padding4" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="6"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Item" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="7"]
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_ITEM"
clip_text = true

[node name="Padding5" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="8"]
visible = false
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Item2" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="9"]
visible = false
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_DEFEND"
clip_text = true

[node name="Padding6" type="Control" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="10"]
visible = false
custom_minimum_size = Vector2(19, 0)
layout_mode = 2

[node name="Item3" type="Button" parent="BG Area/Player Options/ScrollContainer/GridContainer" index="11"]
visible = false
custom_minimum_size = Vector2(281, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pm4r5")
theme_override_font_sizes/font_size = 32
text = "T_BATTLE_MAIN_UI_DEFEND"
clip_text = true

[connection signal="pressed" from="BG Area/Player Options/ScrollContainer/GridContainer/Attack" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="BG Area/Player Options/ScrollContainer/GridContainer/Magic" to="." method="_on_magic_button_pressed"]
[connection signal="pressed" from="BG Area/Player Options/ScrollContainer/GridContainer/Defend" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="BG Area/Player Options/ScrollContainer/GridContainer/Item" to="." method="_on_item_button_pressed"]
